--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "facedetection",
-  "homepage": "https://webkesh.github.io/webapp",
+  "homepage": "https://webkesh.github.io/facedetection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
